fabric/testdata/out/ing_setanta-rules-staging-put-api-wildcard-non-whitelisted.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    metacontroller.k8s.io/last-applied-configuration: '{"apiVersion":"extensions/v1beta1","kind":"Ingress","metadata":{"annotations":{"zalando.org/aws-load-balancer-ssl-policy":"ELBSecurityPolicy-FS-2018-06","zalando.org/skipper-routes":"Weight(3)
      \u0026\u0026 Path(\"/api/**\") \u0026\u0026 Method(\"PUT\") \u0026\u0026 Header(\"X-Forwarded-Proto\",
      \"https\") -\u003e status(403) -\u003e unverifiedAuditLog(\"sub\") -\u003e inlineContent(\"{\\\"title\\\":\\\"Gateway
      Rejected\\\",\\\"status\\\":403,\\\"detail\\\":\\\"Illegal attempt to access
      whitelisted route\\\"}\") -\u003e \u003cshunt\u003e"},"labels":{"controller-uid":"f85d15a7-8d9a-4f3f-a3d2-160c41ac6a6d","deployment-id":"d-qpkcoa3a6yvf5wpdofjfgnob7","pipeline-id":"l-7qphde1bibps8wfqd27vr3cq7"},"name":"setanta-rules-staging-put-api-wildcard-non-whitelisted","namespace":"default"},"spec":{"rules":[{"host":"setanta-rules-staging.smart-product-platform-test.zalan.do","http":{"paths":[{"backend":{"serviceName":"setanta-rules-staging","servicePort":"http"},"pathType":"Implement [...]
    zalando.org/aws-load-balancer-ssl-policy: ELBSecurityPolicy-FS-2018-06
    zalando.org/skipper-routes: Weight(3) && Path("/api/**") && Method("PUT") && Header("X-Forwarded-Proto",
      "https") -> status(403) -> unverifiedAuditLog("sub") -> inlineContent("{\"title\":\"Gateway
      Rejected\",\"status\":403,\"detail\":\"Illegal attempt to access whitelisted
      route\"}") -> <shunt>
  creationTimestamp: "2020-01-06T11:15:25Z"
  generation: 1
  labels:
    controller-uid: f85d15a7-8d9a-4f3f-a3d2-160c41ac6a6d
    deployment-id: d-qpkcoa3a6yvf5wpdofjfgnob7
    pipeline-id: l-7qphde1bibps8wfqd27vr3cq7
  name: setanta-rules-staging-put-api-wildcard-non-whitelisted
  namespace: default
  ownerReferences:
  - apiVersion: zalando.org/v1
    blockOwnerDeletion: true
    controller: true
    kind: FabricGateway
    name: setanta-rules-staging
    uid: f85d15a7-8d9a-4f3f-a3d2-160c41ac6a6d
  resourceVersion: "1361160689"
  uid: b2640cde-83a3-4473-8efb-78954a9f248c
spec:
  rules:
  - host: setanta-rules-staging.smart-product-platform-test.zalan.do
    http:
      paths:
      - backend:
          service:
            name: setanta-rules-staging
            port:
              name: http
        pathType: ImplementationSpecific
  - host: spp-rules-test.zalandoapis.com
    http:
      paths:
      - backend:
          service:
            name: setanta-rules-staging
            port:
              name: http
        pathType: ImplementationSpecific
  - host: rules.setanta-staging.zalan.do
    http:
      paths:
      - backend:
          service:
            name: setanta-rules-staging
            port:
              name: http
        pathType: ImplementationSpecific
status:
  loadBalancer:
    ingress:
    - hostname: kube-ing-lb-vejw9uwox1cj-898356825914b821.elb.eu-central-1.amazonaws.com
